@@ -23,7 +23,7 @@ import static tech.pegasys.teku.storage.server.kvstore.KvStoreConfiguration.WAL_
 import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -38,9 +38,12 @@ import org.rocksdb.Cache;
 import org.rocksdb.ColumnFamilyDescriptor;
 import org.rocksdb.ColumnFamilyHandle;
 import org.rocksdb.ColumnFamilyOptions;
+import org.rocksdb.CompressionType;
 import org.rocksdb.DBOptions;
 import org.rocksdb.Env;
 import org.rocksdb.LRUCache;
+import org.rocksdb.Options;
+import org.rocksdb.RocksDB;
 import org.rocksdb.RocksDBException;
 import org.rocksdb.Statistics;
 import org.rocksdb.TransactionDB;
@@ -83,7 +86,8 @@ public class RocksDbInstanceFactory {
 
     // Create options
     final TransactionDBOptions txOptions = new TransactionDBOptions();
-    final RocksDbStats rocksDbStats = new RocksDbStats(metricsSystem, metricCategory);
+    final RocksDbStats rocksDbStats =
+        new RocksDbStats(metricsSystem, metricCategory, configuration);
     final DBOptions dbOptions = createDBOptions(configuration, rocksDbStats.getStats());
     final LRUCache blockCache = new LRUCache(configuration.getCacheCapacity());
     final ColumnFamilyOptions columnFamilyOptions =
@@ -92,8 +96,19 @@ public class RocksDbInstanceFactory {
         new ArrayList<>(
             List.of(txOptions, dbOptions, columnFamilyOptions, rocksDbStats, blockCache));
 
-    List<ColumnFamilyDescriptor> columnDescriptors =
-        createColumnFamilyDescriptors(columns, deletedColumns, columnFamilyOptions);
+    final ColumnFamilyDescriptors columnFamilyDescriptors =
+        createColumnFamilyDescriptors(
+            configuration, columns, deletedColumns, columnFamilyOptions, resources);
+    final List<ColumnFamilyDescriptor> columnDescriptors =
+        getExistingColumnIds(configuration).stream()
+            .map(
+                id ->
+                    columnFamilyDescriptors
+                        .byId()
+                        .getOrDefault(
+                            id,
+                            new ColumnFamilyDescriptor(id.toArrayUnsafe(), columnFamilyOptions)))
+            .collect(Collectors.toCollection(ArrayList::new));
     Map<Bytes, KvStoreColumn<?, ?>> columnsById =
         columns.stream().collect(Collectors.toMap(KvStoreColumn::getId, Function.identity()));
 
@@ -126,7 +141,8 @@ public class RocksDbInstanceFactory {
 
       rocksDbStats.registerMetrics(db);
 
-      return new RocksDbInstance(db, defaultHandle, columnHandlesMap, resources);
+      return new RocksDbInstance(
+          db, defaultHandle, columnHandlesMap, columnFamilyDescriptors.byColumn(), resources);
     } catch (RocksDBException e) {
       throw RocksDbExceptionUtil.wrapException(
           "Failed to open database at path: " + configuration.getDatabaseDir(), e);
@@ -157,7 +173,6 @@ public class RocksDbInstanceFactory {
             .setMaxBackgroundJobs(configuration.getMaxBackgroundJobs())
             .setDbWriteBufferSize(configuration.getWriteBufferCapacity())
             .setMaxOpenFiles(configuration.getMaxOpenFiles())
-            .setCreateMissingColumnFamilies(true)
             .setLogFileTimeToRoll(TIME_TO_ROLL_LOG_FILE)
             .setKeepLogFileNum(NUMBER_OF_LOG_FILES_TO_KEEP)
             .setEnv(Env.getDefault().setBackgroundThreads(configuration.getBackgroundThreadCount()))
@@ -182,17 +197,63 @@ public class RocksDbInstanceFactory {
         .setTableFormatConfig(createBlockBasedTableConfig(cache));
   }
 
-  private static List<ColumnFamilyDescriptor> createColumnFamilyDescriptors(
+  private static ColumnFamilyDescriptors createColumnFamilyDescriptors(
+      final KvStoreConfiguration configuration,
       final Collection<KvStoreColumn<?, ?>> columns,
       final Collection<Bytes> deletedColumns,
-      final ColumnFamilyOptions columnFamilyOptions) {
-    final List<ColumnFamilyDescriptor> columnDescriptors =
-        Stream.concat(columns.stream().map(KvStoreColumn::getId), deletedColumns.stream())
-            .map(id -> new ColumnFamilyDescriptor(id.toArrayUnsafe(), columnFamilyOptions))
-            .collect(Collectors.toCollection(ArrayList::new));
-    columnDescriptors.add(
+      final ColumnFamilyOptions columnFamilyOptions,
+      final List<AutoCloseable> resources) {
+
+    final ColumnFamilyOptions columnFamilyOptionsWithBlobDb =
+        new ColumnFamilyOptions(columnFamilyOptions);
+    resources.add(columnFamilyOptionsWithBlobDb);
+    if (configuration.blobDbEnabled()) {
+      columnFamilyOptionsWithBlobDb
+          .setEnableBlobFiles(true)
+          .setMinBlobSize(100)
+          .setBlobCompressionType(CompressionType.LZ4_COMPRESSION)
+          .setEnableBlobGarbageCollection(true);
+    }
+
+    final Map<Bytes, ColumnFamilyDescriptor> descriptorsById = new HashMap<>();
+    final Map<KvStoreColumn<?, ?>, ColumnFamilyDescriptor> descriptorsByColumn = new HashMap<>();
+    for (KvStoreColumn<?, ?> column : columns) {
+      final ColumnFamilyDescriptor descriptor =
+          new ColumnFamilyDescriptor(
+              column.getId().toArrayUnsafe(),
+              configuration.blobDbEnabled() && column.containsStaticData()
+                  ? columnFamilyOptionsWithBlobDb
+                  : columnFamilyOptions);
+      descriptorsById.put(column.getId(), descriptor);
+      descriptorsByColumn.put(column, descriptor);
+    }
+    for (Bytes deletedColumn : deletedColumns) {
+      descriptorsById.put(
+          deletedColumn,
+          new ColumnFamilyDescriptor(deletedColumn.toArrayUnsafe(), columnFamilyOptions));
+    }
+    descriptorsById.put(
+        Schema.DEFAULT_COLUMN_ID,
         new ColumnFamilyDescriptor(Schema.DEFAULT_COLUMN_ID.toArrayUnsafe(), columnFamilyOptions));
-    return Collections.unmodifiableList(columnDescriptors);
+    return new ColumnFamilyDescriptors(
+        ImmutableMap.copyOf(descriptorsById), ImmutableMap.copyOf(descriptorsByColumn));
+  }
+
+  private static List<Bytes> getExistingColumnIds(final KvStoreConfiguration configuration) {
+    if (!configuration.getDatabaseDir().resolve("CURRENT").toFile().exists()) {
+      return List.of(Schema.DEFAULT_COLUMN_ID);
+    }
+
+    try (final Options options = new Options()) {
+      final List<Bytes> existingColumnIds =
+          RocksDB.listColumnFamilies(options, configuration.getDatabaseDir().toString()).stream()
+              .map(Bytes::wrap)
+              .collect(Collectors.toCollection(ArrayList::new));
+      return existingColumnIds.isEmpty() ? List.of(Schema.DEFAULT_COLUMN_ID) : existingColumnIds;
+    } catch (RocksDBException e) {
+      throw RocksDbExceptionUtil.wrapException(
+          "Failed to list column families at path: " + configuration.getDatabaseDir(), e);
+    }
   }
 
   private static BlockBasedTableConfig createBlockBasedTableConfig(final Cache cache) {
@@ -204,4 +265,8 @@ public class RocksDbInstanceFactory {
         .setCacheIndexAndFilterBlocks(false)
         .setBlockSize(ROCKSDB_BLOCK_SIZE);
   }
+
+  private record ColumnFamilyDescriptors(
+      ImmutableMap<Bytes, ColumnFamilyDescriptor> byId,
+      ImmutableMap<KvStoreColumn<?, ?>, ColumnFamilyDescriptor> byColumn) {}
 }
